# BitRaamSourceCodeVer5-2025

./: CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  libbitraamkernel.pc.in  vcpkg.json
ci/: lint_imagefile
cmake/: introspection.cmake  tests.cmake
contrib/: README.md  valgrind.supp
depends/: Makefile  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  assumeutxo.md  benchmarking.md  bips.md  bitraam-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes-31223.md  release-notes-empty-template.md  release-process.md  (+5 more)
share/: setup.nsi.in
src/: .clang-tidy  CMakeLists.txt  addrdb.cpp  addresstype.h  addrman.cpp  addrman_impl.h  arith_uint256.h  bip324.cpp  bitcoin-wallet.cpp  bitraam-chainstate.cpp  bitraam-cli-res.rc  bitraam-cli.cpp  bitraam-tx-res.rc  bitraam-tx.cpp  bitraam-util-res.rc  bitraam-util.cpp  bitraam-wallet-res.rc  bitraam-wallet.cpp  bitraamd-res.rc  bitraamd.cpp  chain.h  chainparamsbase.cpp  clientversion.h  (+35 more)
src/qt/test/: CMakeLists.txt  addressbooktests.cpp  apptests.cpp  apptests.h  optiontests.cpp  test_main.cpp  uritests.cpp  wallettests.cpp
(+908 files in other folders)
